erDiagram
    auth_users ||--o{ chat_threads : "소유"
    auth_users ||--o{ chat_logs : "작성"
    chat_threads ||--o{ chat_logs : "포함"

    auth_users {
        uuid id PK "Supabase Auth 관리"
        string email
        timestamptz created_at
    }
    chat_threads {
        uuid id PK "LangGraph thread_id 로 사용"
        uuid user_id FK
        string title
        timestamptz created_at
        timestamptz updated_at
    }
    chat_logs {
        bigserial id PK
        uuid thread_id FK
        uuid user_id FK
        text question
        text answer
        string status "success 또는 error"
        text error_message
        int latency_ms "AI 응답 소요 시간"
        timestamptz created_at
    }
